Fix translation string

--- a/locale/da/LC_MESSAGES/django.po
+++ b/locale/da/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-01 00:42+0300\n"
+"POT-Creation-Date: 2023-08-01 00:56+0300\n"
 "PO-Revision-Date: 2020-09-07 15:50+0000\n"
 "Last-Translator: Ida Sihvonen, 2023\n"
 "Language-Team: Danish (https://www.transifex.com/kausal-tech/teams/113123/da/)\n"
@@ -2692,7 +2692,8 @@ msgid ""
 "\n"
 "Thank you for taking part in implementing the action plan!\n"
 "\n"
-"Kind regards, the action plan administrators"
+"Kind regards,\n"
+"the action plan administrators"
 msgstr ""
 "Hvis du har problemer med at bruge handlingsplanens overvågningsplatform, bedes du sende en e-mail til administratorerne af handlingsplanen.\n"
 "\n"
