--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-01 00:42+0300\n"
+"POT-Creation-Date: 2023-08-01 00:56+0300\n"
 "PO-Revision-Date: 2023-07-31 12:16+0000\n"
 "Last-Translator: Weblate Admin <foo@example.com>\n"
 "Language-Team: German <http://weblate.example.com/projects/watch-wagtail-5/backend-django/de/>\n"
@@ -2638,7 +2638,8 @@ msgid ""
 "\n"
 "Thank you for taking part in implementing the action plan!\n"
 "\n"
-"Kind regards, the action plan administrators"
+"Kind regards,\n"
+"the action plan administrators"
 msgstr ""
 "Wenn Sie Schwierigkeiten bei der Verwendung der Maßnahmenplan-Beobachtungsplattform haben, senden Sie bitte eine E-Mail an die Administratoren des Maßnahmenplans.\n"
 "\n"
