--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-01 00:42+0300\n"
+"POT-Creation-Date: 2023-08-01 00:56+0300\n"
 "PO-Revision-Date: 2023-04-12 13:44+0300\n"
 "Last-Translator: Timo Tuominen, 2023\n"
 "Language-Team: Finnish (https://app.transifex.com/kausal-tech/teams/113123/fi/)\n"
@@ -2715,7 +2715,8 @@ msgid ""
 "\n"
 "Thank you for taking part in implementing the action plan!\n"
 "\n"
-"Kind regards, the action plan administrators"
+"Kind regards,\n"
+"the action plan administrators"
 msgstr ""
 "Mikäli sinulla on ohjelmavahdin käyttöön liittyviä ongelmia,\n"
 "laita viestiä toimenpideohjelman pääkäyttäjälle.\n"
