--- a/locale/en_AU/LC_MESSAGES/django.po
+++ b/locale/en_AU/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-01 00:42+0300\n"
+"POT-Creation-Date: 2023-08-01 00:56+0300\n"
 "PO-Revision-Date: 2020-09-07 15:50+0000\n"
 "Language-Team: English (Australia) (https://www.transifex.com/kausal-tech/teams/113123/en_AU/)\n"
 "Language: en_AU\n"
@@ -2614,7 +2614,8 @@ msgid ""
 "\n"
 "Thank you for taking part in implementing the action plan!\n"
 "\n"
-"Kind regards, the action plan administrators"
+"Kind regards,\n"
+"the action plan administrators"
 msgstr ""
 
 #: notifications/models.py
