--- a/locale/da/LC_MESSAGES/django.po
+++ b/locale/da/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-11 12:23+0300\n"
+"POT-Creation-Date: 2023-08-30 14:30+0300\n"
 "PO-Revision-Date: 2023-08-08 13:02+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
 "Language-Team: Danish <https://weblate.kausal.tech/projects/watch/django/da/>\n"
@@ -155,6 +155,12 @@ msgid "Organization occurs multiple times as responsible party"
 msgstr "Organisation optræder flere gange som ansvarlig part"
 
 #: actions/api.py
+#, fuzzy
+#| msgid "Organization occurs multiple times as responsible party"
+msgid "Person occurs multiple times as contact person"
+msgstr "Organisation optræder flere gange som ansvarlig part"
+
+#: actions/api.py
 msgid "Identifier must be set"
 msgstr "Identifikator skal indstilles"
 
@@ -165,6 +171,10 @@ msgstr "Identifikator findes allerede"
 #: actions/api.py people/models.py
 msgid "Person with this email already exists"
 msgstr "En person med denne e-mailadresse findes allerede"
+
+#: actions/api.py
+msgid "Not all objects have an email address"
+msgstr ""
 
 #: actions/api.py
 #, fuzzy, python-format
@@ -211,6 +221,12 @@ msgstr "Hvis formatet er \"Kategori\", skal du vælge hvilken kategoritype attri
 #: actions/attribute_type_admin.py
 msgid "If format is 'Numeric', a unit must be set"
 msgstr ""
+
+#: actions/attribute_type_admin.py
+#, fuzzy
+#| msgid "attribute choice options"
+msgid "Choice options"
+msgstr "valgmuligheder for attributter"
 
 #: actions/attribute_type_admin.py actions/blocks/category_list.py
 #: actions/blocks/filters.py actions/category_admin.py pages/models.py
@@ -384,6 +400,12 @@ msgstr "Kategorityper"
 #: actions/category_admin.py
 msgid "Action and indicator categorization"
 msgstr "Handlings- og indikatorkategorisering"
+
+#: actions/category_admin.py
+#, fuzzy
+#| msgid "category levels"
+msgid "Category levels"
+msgstr "kategoriniveauer"
 
 #: actions/category_admin.py
 msgid "There is already a category with this identifier."
@@ -576,7 +598,7 @@ msgstr "En plans andet sprog kan ikke være det samme som dets primære sprog"
 msgid "Draft"
 msgstr ""
 
-#: actions/models/action.py
+#: actions/models/action.py aplans/utils.py
 #, fuzzy
 #| msgid "Published"
 msgid "Public"
@@ -803,6 +825,18 @@ msgstr "handlingsansvarlig part"
 #: actions/models/action.py
 msgid "action responsible parties"
 msgstr "handlingsansvarlige parter"
+
+#: actions/models/action.py
+#, fuzzy
+#| msgid "Edit"
+msgid "Editor"
+msgstr "Redigere"
+
+#: actions/models/action.py
+#, fuzzy
+#| msgid "operational"
+msgid "Moderator"
+msgstr "operationelle"
 
 #: actions/models/action.py actions/models/plan.py indicators/models.py
 #: orgs/models.py people/models.py
@@ -1215,6 +1249,24 @@ msgid "Either SVG or image must be set"
 msgstr "Enten SVG eller billede skal indstilles"
 
 #: actions/models/features.py
+#, fuzzy
+#| msgid "indicator contact persons"
+msgid "Do not show contact persons publicly"
+msgstr "indikator kontaktpersoner"
+
+#: actions/models/features.py
+#, fuzzy
+#| msgid "Show only un-merged actions"
+msgid "Show only name, role and affiliation"
+msgstr "Vis kun ikke-sammenkoblede handlinger"
+
+#: actions/models/features.py
+#, fuzzy
+#| msgid "Show all actions"
+msgid "Show all information"
+msgstr "Vis alle handlinger"
+
+#: actions/models/features.py
 msgid "Allow images for actions"
 msgstr "Tillad billeder til handlinger"
 
@@ -1231,11 +1283,15 @@ msgid "Should the public website contain a link to the admin login?"
 msgstr "Skal den offentlige hjemmeside indeholde et link til admin-login?"
 
 #: actions/models/features.py
-msgid "Contact persons public"
-msgstr "Offentlige kontaktpersoner"
+#, fuzzy
+#| msgid "indicator contact persons"
+msgid "Publicly visible data about contact persons"
+msgstr "indikator kontaktpersoner"
 
 #: actions/models/features.py
-msgid "Set if the contact persons should be visible in the public UI"
+#, fuzzy
+#| msgid "Set if the contact persons should be visible in the public UI"
+msgid "Choose which information about contact persons is visible in the public UI"
 msgstr "Indstil om kontaktpersonerne skal være synlige i den offentlige brugergrænseflade"
 
 #: actions/models/features.py
@@ -1253,6 +1309,16 @@ msgstr "Vis handlingsidentifikatorer"
 #: actions/models/features.py
 msgid "Set if action identifiers should be visible in the public UI"
 msgstr "Indstil, om handlingsidentifikatorer skal være synlige i den offentlige brugergrænseflade"
+
+#: actions/models/features.py
+#, fuzzy
+#| msgid "action contact persons"
+msgid "Action contact persons have different roles"
+msgstr "handling kontaktpersoner"
+
+#: actions/models/features.py
+msgid "Set if there are separate contact persons with publishing rights and others who can only suggest changes"
+msgstr ""
 
 #: actions/models/features.py
 #, fuzzy
@@ -1606,6 +1672,12 @@ msgid "Plans"
 msgstr "Planer"
 
 #: actions/wagtail_admin.py
+#, fuzzy
+#| msgid "general administrators"
+msgid "General administrators"
+msgstr "generelle administratorer"
+
+#: actions/wagtail_admin.py
 msgid "Domains"
 msgstr "Domæner"
 
@@ -1674,6 +1746,10 @@ msgid "Google"
 msgstr ""
 
 #: admin_site/models.py
+msgid "Tunnistamo"
+msgstr ""
+
+#: admin_site/models.py
 msgid "login method"
 msgstr ""
 
@@ -1724,6 +1800,10 @@ msgstr "Log ind på Kausal Watch"
 
 #: admin_site/templates/wagtailadmin/login.html
 msgid "Our apologies, the server is temporarily experiencing difficulties."
+msgstr ""
+
+#: admin_site/views.py
+msgid "Your account settings have been changed successfully!"
 msgstr ""
 
 #: admin_site/wagtail.py
@@ -1844,20 +1924,18 @@ msgid "English (United States)"
 msgstr "Engelsk (Forenede Stater)"
 
 #: aplans/settings.py
-msgid "English (United Kingdom)"
-msgstr "Engelsk (Storbritannien)"
-
-#: aplans/settings.py
 msgid "English (Australia)"
 msgstr "Engelsk (Australien)"
 
 #: aplans/settings.py
-msgid "Finnish"
-msgstr "finsk"
+msgid "English (United Kingdom)"
+msgstr "Engelsk (Storbritannien)"
 
 #: aplans/settings.py
-msgid "Swedish"
-msgstr "svensk"
+#, fuzzy
+#| msgid "Danish"
+msgid "Spanish"
+msgstr "Dansk"
 
 #: aplans/settings.py
 #, fuzzy
@@ -1866,26 +1944,42 @@ msgid "Spanish (United States)"
 msgstr "Engelsk (Forenede Stater)"
 
 #: aplans/settings.py
-#, fuzzy
-#| msgid "Danish"
-msgid "Spanish"
-msgstr "Dansk"
+msgid "Finnish"
+msgstr "finsk"
+
+#: aplans/settings.py
+msgid "Latvian"
+msgstr ""
+
+#: aplans/settings.py
+msgid "Swedish"
+msgstr "svensk"
 
 #: aplans/utils.py
 msgid "order"
 msgstr "bestille"
 
 #: aplans/utils.py
-msgid "Not editable"
-msgstr "Kan ikke redigeres"
+msgid "Authenticated users"
+msgstr ""
 
 #: aplans/utils.py orgs/wagtail_admin.py
 msgid "Plan admins"
 msgstr "Plan administratorer"
 
 #: aplans/utils.py
+msgid "Not editable"
+msgstr "Kan ikke redigeres"
+
+#: aplans/utils.py
 msgid "Edit rights"
 msgstr "Rediger rettigheder"
+
+#: aplans/utils.py
+#, fuzzy
+#| msgid "Accessibility"
+msgid "Visibility"
+msgstr "Tilgængelighed"
 
 #: aplans/utils.py
 #, python-format
@@ -1971,6 +2065,10 @@ msgstr "websteds generelle indhold"
 #: content/models.py
 msgid "site general contents"
 msgstr "webstedets generelle indhold"
+
+#: content/wagtail_admin.py
+msgid "Site settings"
+msgstr "Indstillinger for websted"
 
 #: documents/chooser.py
 msgid "Server Error"
@@ -2574,6 +2672,12 @@ msgid "none"
 msgstr "ingen"
 
 #: indicators/wagtail_admin.py
+#, fuzzy
+#| msgid "dimensions"
+msgid "Dimensions"
+msgstr "dimensioner"
+
+#: indicators/wagtail_admin.py
 #, python-format
 msgid "If you change the dimensions of this indicator (currently %(dimensions)s), its single value will be deleted."
 msgid_plural "If you change the dimensions of this indicator (currently %(dimensions)s), all its %(num)d values will be deleted."
@@ -2584,6 +2688,14 @@ msgstr[1] "Hvis du ændrer dimensionerne af denne indikator (i øjeblikket %(dim
 #, python-format
 msgid "This indicator is linked to a common indicator, so quantity, unit and dimensions cannot be edited. Current quantity: %(quantity)s; unit: %(unit)s; dimensions: %(dimensions)s"
 msgstr "Denne indikator er knyttet til en fælles indikator, så mængde, enhed og dimensioner kan ikke redigeres. Aktuel mængde: %(quantity)s; enhed: %(unit)s; dimensioner: %(dimensions)s"
+
+#: indicators/wagtail_admin.py
+msgid "Effects"
+msgstr ""
+
+#: indicators/wagtail_admin.py
+msgid "Causes"
+msgstr ""
 
 #: indicators/wagtail_admin.py
 msgid "Advanced options"
@@ -3366,6 +3478,10 @@ msgid "Category pages"
 msgstr "Kategori sider"
 
 #: pages/models.py
+msgid "This category already has a page"
+msgstr ""
+
+#: pages/models.py
 msgid "lead content"
 msgstr "hovedindhold"
 
@@ -3915,6 +4031,9 @@ msgstr "Brugere"
 msgid "No permission to remove the user belonging to plans you are not managing."
 msgstr ""
 
+#~ msgid "Contact persons public"
+#~ msgstr "Offentlige kontaktpersoner"
+
 #~ msgctxt "hyphenated"
 #~ msgid "Plans"
 #~ msgstr "Planer"
@@ -3940,9 +4059,6 @@ msgstr ""
 
 #~ msgid "Show only actions I can modify"
 #~ msgstr "Vis kun handlinger jeg kan ændre"
-
-#~ msgid "Show all actions"
-#~ msgstr "Vis alle handlinger"
 
 #~ msgid "By last updated"
 #~ msgstr "Senest opdateret"
@@ -3979,9 +4095,6 @@ msgstr ""
 
 #~ msgid "Show all"
 #~ msgstr "Vis alt"
-
-#~ msgid "Show only un-merged actions"
-#~ msgstr "Vis kun ikke-sammenkoblede handlinger"
 
 #~ msgid "Show also merged actions"
 #~ msgstr "Vis også sammenkoblede handlinger"
@@ -4065,9 +4178,6 @@ msgstr ""
 #, python-format
 #~ msgid "New %(related_verbose_name)s"
 #~ msgstr "Ny %(related_verbose_name)s"
-
-#~ msgid "Site settings"
-#~ msgstr "Indstillinger for websted"
 
 #~ msgid "Downstream indicator"
 #~ msgstr "Nedstrøms indikator"
